[package]
name = "beer_delivery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
bevy_ecs_tilemap = "0.10.0"
rmp-serde = "1.1.1"
serde = { version = "1.0.164", features = ["derive"] }
thiserror = "1.0.40"
